2005-01-05  Benhur Stein <benhur@inf.ufsm.br>
	* SpaceTimeViewer/STEntityTypeLayoutController.m: made highlighting
	  of selected buttons in "Shapes&Sizes" work again

2005-01-05  Benhur Stein <benhur@inf.ufsm.br>
	* General/PajeEntityInspector.m: removed debug message

2005-01-05  Benhur Stein <benhur@inf.ufsm.br>
	* General/ColoredSwitchButtonCell.m: added -compare: method (some
	  recent change in GNUstep made ordering of these cells wrong)

2005-01-05  Benhur Stein <benhur@inf.ufsm.br>
	* Paje/Paje_main.m, Paje/PajeInfo.plist: Changed Copyright notice

2005-01-04  (1.2.2) Vincent Danjean <Vincent.Danjean@ens-lyon.org>

	* Version NEED to be set in changelog so that release can be
	  easily generated
	
2005-01-04  (1.2.1) Vincent Danjean <Vincent.Danjean@ens-lyon.org>

	* Bump to version 1.2.1 to make a release on objectweb
	
2004-12-21  Benhur Stein  <benhur@inf.ufsm.br>

	* Paje/PajeController.m: fixed typo in filter name
	  corrects bug #301134 (reported by Gregory)

2004-12-14 (1.2.0) Vincent Danjean <Vincent.Danjean@ens-lyon.org>

	* Bump to version 1.2 to make the first release on objectweb
	
2004-10-18  Benhur Stein <benhur@inf.ufsm.br>

        * **/*.{h,m,tex}: add copyright notice

2004-10-17  Benhur Stein <benhur@inf.ufsm.br>

	* SpaceTime.bproj/DrawView+Drawing.m,ST*.{h,m,gorm}:
          add support for writing names on events and states

2004-10-12  Benhur Stein <benhur@inf.ufsm.br>

	* PajeSimul/PajeSimul+Events.m
	  SpaceTime.bproj/DrawView+Drawing.m
	  SpaceTime.bproj/STController.m
	  SpaceTime.bproj/STEntityTypeLayout.m
	  Encapsulate.bproj/Encapsulate.m
	  General.bproj/PajeType.h
	  General.bproj/PajeType.m
	  General.bproj/PajeFilter.h
	  General.bproj/PajeFilter.m,
	  PajeEventDecoder/PajeEventDecoder.m
	  Documentation/lang-paje/typeevent.tex: add support for 'color' type
	    in event fields; 'Color' field in 'PajeDefineValue';
	    'Shape' and 'Height' fields in 'PajeDefine<entity>Type';
	    'Width' field in 'PajeDefineEventType'
